[package]
name = "incremental-merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10.6", default-features = false }
ark-bn254 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
ark-ff = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
lazy_static = "1.5.0"
hex = "0.4.3"